Fixed the issue with text input incorrectly overlapping with floating div.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -166,9 +166,11 @@ span
   display: block
   margin-bottom: 10px
   margin-left: 50px
-  input[type="text"]
-    clear: right
 
 small.timestamp
   float: right
   margin-left: 5px
+  
+span.wrapper
+  display: block
+  overflow: hidden
